--- a/Reservas/passageiros/view/home.html
+++ b/Reservas/passageiros/view/home.html
@@ -107,8 +107,8 @@
                 </div>
                 <div class="col-sm-2.5">
                   <label for="text">Data de saída:</label>
-                  <input type="text" style="color:black;" placeholder="yyyy-mm-dd">
-                  <button class="btn btn-success" onclick="getid()"> Buscar</button>
+                  <input id="campo" type="text" style="color:black;" placeholder="yyyy-mm-dd">
+                  <button class="btn btn-success" onclick="buscar();"> Buscar</button>
                 </div>					
                 </div>
             </div>
@@ -116,13 +116,13 @@
           <table class="table table-striped table-hover">
               <thead>
                 <tr>
-                    <td><b>Data de Saída</b></td>
+                    <td><b>Número do Voo</b></td>
+                    <th> Data de Saída</th>
                     <th>Número da Rota</th>
                     <th>Aeronave</th>
                     <th>Reservar</th>
                 </tr>
               </thead>
-
               <!--tbody responsável por receber as modicicações do Jquery-->
               <tbody id="tbodyid">
               </tbody>
@@ -222,26 +222,23 @@
             </div>
             <div class="modal-body">					
               <p>Você realmente deseja reservar este voo?</p>
-              <p class="text-warning"><small>veja suas reservas na opção reservas</small></p>
+              <p class="text-warning"><small>veja suas reservas no menu reservas</small></p>
             </div>
             <div class="modal-footer">
               <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-              <input type="submit" class="btn btn-success" value="Reservar">
+              <input type="submit" class="btn btn-success" onclick="reservar()" value="Reservar">
             </div>
           </form>
         </div>
       </div>
     </div>
-      </div>
+  </div>
     <!-- /#page-content-wrapper -->
 
   </div>
   <!-- /#wrapper -->
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
   <!-- Menu Toggle Script -->
   <script>
     $("#menu-toggle").click(function(e) {
