--- a/Reservas/passageiros/view/reservas.html
+++ b/Reservas/passageiros/view/reservas.html
@@ -225,8 +225,8 @@
               <p class="text-warning"><small>Essa ação não pode ser desfeita</small></p>
             </div>
             <div class="modal-footer">
-              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-              <input type="submit" class="btn btn-danger" onclick="cancelar();"value="Reservar">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Não">
+              <input type="submit" class="btn btn-danger" onclick="cancelar();"value="Cancelar">
             </div>
           </form>
         </div>
