--- a/Reservas/admin/view/home.html
+++ b/Reservas/admin/view/home.html
@@ -107,10 +107,15 @@
         <div class="table-wrapper">
             <div class="table-title">
               <div class="row">
-                  <div class="col-sm-6">
+                  <div class="col-sm-4">
                     <h2>Gerenciar <b>Voos</b></h2>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-2.5">
+                      <label for="text">Data de saída:</label>
+                      <input id="campo" type="text" style="color:black;" placeholder="yyyy-mm-dd">
+                      <button class="btn btn-success" onclick="buscar();"> Buscar</button>
+                    </div>	
+                  <div class="col-sm-5">
                     <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Adicionar novo</span></a>
                     <!--<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>		-->				
                   </div>
@@ -159,27 +164,27 @@
     <div id="addEmployeeModal" class="modal fade">
       <div class="modal-dialog">
         <div class="modal-content">
-          <form>
+          <form method="POST" action="../servidor/index.php/voo/inserir" >
             <div class="modal-header">						
               <h4 class="modal-title">Add Employee</h4>
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
             <div class="modal-body">					
               <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control" required>
+                <label>Número do Voo</label>
+                <input name="numero" type="text" class="form-control" required>
               </div>
               <div class="form-group">
-                <label>Email</label>
-                <input type="email" class="form-control" required>
+                <label>Data de Saída</label>
+                <input name="data" type="date" class="form-control" required>
               </div>
               <div class="form-group">
-                <label>Address</label>
-                <textarea class="form-control" required></textarea>
+                <label>Número da Rota</label>
+                <input name="rota" class="form-control" required></input>
               </div>
               <div class="form-group">
-                <label>Phone</label>
-                <input type="text" class="form-control" required>
+                <label>Código da Aernoave</label>
+                <input name="aeronave" class="form-control" required>
               </div>					
             </div>
             <div class="modal-footer">
@@ -231,16 +236,16 @@
         <div class="modal-content">
           <form>
             <div class="modal-header">						
-              <h4 class="modal-title">Delete Employee</h4>
+              <h4 class="modal-title">Deletar Voo</h4>
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
             <div class="modal-body">					
-              <p>Are you sure you want to delete these Records?</p>
-              <p class="text-warning"><small>This action cannot be undone.</small></p>
+              <p>Você realmente deseja deletar este voo?</p>
+              <p class="text-warning"><small>Essa ação não pode ser desfeita.</small></p>
             </div>
             <div class="modal-footer">
               <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-              <input type="submit" class="btn btn-danger" value="Delete">
+              <input type="submit" class="btn btn-danger" onclick="deletar();" value="Delete">
             </div>
           </form>
         </div>
@@ -253,8 +258,6 @@
   <!-- /#wrapper -->
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Menu Toggle Script -->
   <script>
