--- a/Reservas/admin/view/unidadesfederativas.html
+++ b/Reservas/admin/view/unidadesfederativas.html
@@ -102,14 +102,19 @@
           </ul>
         </div>
       </nav>
-      <div class="container">
+      <div class="col-sm-12">
         <div class="table-wrapper">
             <div class="table-title">
               <div class="row">
-                  <div class="col-sm-6">
+                  <div class="col-sm-4">
                     <h2>Gerenciar <b>Unidades Federativas</b></h2>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-2.5">
+                      <label for="text">Sigla da Unidade: </label>
+                      <input id="campo" type="text" style="color:black;" placeholder="AA">
+                      <button class="btn btn-success" onclick="buscar();"> Buscar</button>
+                    </div>	
+                  <div class="col-sm-5">
                     <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Adicionar novo</span></a>
                     <!--<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>		-->				
                   </div>
@@ -158,30 +163,18 @@
         <div class="modal-content">
           <form>
             <div class="modal-header">						
-              <h4 class="modal-title">Add Employee</h4>
+              <h4 class="modal-title">Acicionar UF</h4>
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
             <div class="modal-body">					
               <div class="form-group">
-                <label>Name</label>
+                <label>Sigla da Unidade</label>
                 <input type="text" class="form-control" required>
               </div>
               <div class="form-group">
-                <label>Email</label>
+                <label>Nome da Unidade</label>
                 <input type="email" class="form-control" required>
               </div>
-              <div class="form-group">
-                <label>Address</label>
-                <textarea class="form-control" required></textarea>
-              </div>
-              <div class="form-group">
-                <label>Phone</label>
-                <input type="text" class="form-control" required>
-              </div>					
-            </div>
-            <div class="modal-footer">
-              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-              <input type="submit" class="btn btn-success" value="Add">
             </div>
           </form>
         </div>
