--- a/Reservas/passageiros/view/home.html
+++ b/Reservas/passageiros/view/home.html
@@ -90,7 +90,7 @@
                 Opções
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item">Ver no GitHub</a>
+                <a href ="https://github.com/VictorMaciel28/projetodesoftware"class="dropdown-item">Ver no GitHub</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item"  href="http://localhost/projetodesoftware/">Sair</a>
               </div>
@@ -225,7 +225,7 @@
               <p class="text-warning"><small>veja suas reservas no menu reservas</small></p>
             </div>
             <div class="modal-footer">
-              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
               <input type="submit" class="btn btn-success" onclick="reservar()" value="Reservar">
             </div>
           </form>
